--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.e57da0b9.js"></script>
-    <link rel="stylesheet" href="/assets/index.f59ca95a.css">
+    <title>Toys App</title>
+    <script type="module" crossorigin src="/assets/index.0fdcb451.js"></script>
+    <link rel="stylesheet" href="/assets/index.af90ce6d.css">
   </head>
   <body>
     <div id="app"></div>
